--- a/sell-it-admin/src/App.css
+++ b/sell-it-admin/src/App.css
@@ -1,11 +1,65 @@
 .header {
   display: flex;
   flex-direction: row;
+  justify-items: center;
+  background-color: #ffffff;
+  width: 100%;
 }
 .logo {
   width: 7em;
+  margin-left: 36px;
 }
 .blind-header {
   width: 100%;
   display: flex;
+}
+.main-content {
+  display: flex;
+  flex-direction: column;
+  background-color: #f5f5f5;
+  width: 100%;
+  height: 100vh;
+}
+.sidebar {
+  top: 0;
+  left: 0;
+  width: 256px;
+  height: 100%;
+  background-color: #ffffff;
+  padding: 20px;
+  margin-left: 14px;
+  margin-top: 16px;
+  border-radius: 14px;
+}
+.nav-button {
+  padding: 8px 16px 8px 16px;
+  text-decoration: none;
+  display: flex;
+  justify-items: center;
+  margin-top: 12px;
+  color: rgba(0, 0, 0, 0.87);
+}
+.nav-button.active {
+  background: #2f81ed2d;
+  border-radius: 4px;
+  color: #1c64f2;
+}
+.title-button {
+  margin-left: 24px;
+}
+.notification {
+  float: right;
+  margin-left: auto;
+  margin-right: 24px;
+  margin-top: 16px;
+}
+.main-body {
+  margin-left: 30px;
+  margin-top: 16px;
+  background-color: #ffffff;
+}
+.content-area {
+  display: flex;
+  flex-direction: row;
+  border-radius: 14px;
 }
