--- a/sell-it-admin/src/App.css
+++ b/sell-it-admin/src/App.css
@@ -8,6 +8,7 @@ a {
   justify-items: center;
   background-color: #ffffff;
   width: 100%;
+  align-items: center;
 }
 .logo {
   width: 7em;
@@ -66,8 +67,7 @@ a {
 .notification {
   float: right;
   margin-left: auto;
-  margin-right: 24px;
-  margin-top: 16px;
+  margin-right: 2em;
 }
 .main-body {
   margin-left: 30px;
