Added new bid page

--- a/sell-it-admin/src/App.css
+++ b/sell-it-admin/src/App.css
@@ -77,6 +77,8 @@ a {
   padding: 12px;
   border-radius: 14px;
   width: 80%;
+  overflow-y: auto;
+  max-height: 80vh;
 }
 .content-area {
   display: flex;
